@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_releases_template.html,v 1.14 2010-10-27 22:10:19 guru Exp $  -->
+<!--  $Id: gmt_releases_template.html,v 1.15 2010-11-01 23:10:43 guru Exp $  -->
 <TITLE>GMT Release Notes</TITLE>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Release Notes</CENTER></h2><P>
@@ -19,7 +19,8 @@ version of GMT (the CVS version) see the
 </OL>
 <LI><B>GMT 4</B>
 <OL>
-<LI>1-NOV-2010: GMT Version 4.5.4 Released
+<LI>1-NOV-2010: GMT Version 4.5.5 Released
+<LI>1-NOV-2010: GMT Version 4.5.4 Aborted (technical difficulties)
 <LI>15-JUL-2010: GMT Version 4.5.3 Released
 <LI>15-JAN-2010: GMT Version 4.5.2 Released
 <LI>20-SEP-2009: GMT Version 4.5.1 Released
